force-app/main/default/objects/Invoice_Template__c/Invoice_Template__c.object-meta.xml
<CustomObject>
    <label>Invoice Template</label>
    <nameField>
        <label>Invoice Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>