force-app/main/default/objects/Invoice_Template__c/fields/Template_Path__c.field-meta.xml
<CustomField>
    <fullName>Template_Path__c</fullName>
    <label>Template Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>