force-app/main/default/objects/Invoice_Template__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Invoice Templates</relationshipLabel>
    <relationshipName>Invoice_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>